--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aghyadalbalkhi-ASAC/city_explorer_api.git"
+    "url": "git+https://github.com/RB-Codes/city_explorer_api.git"
   },
-  "author": "aghyadalbalkhi-ASAC",
+  "author": "RB-Codes",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/aghyadalbalkhi-ASAC/city_explorer_api/issues"
+    "url": "https://github.com/RB-Codes/city_explorer_api/issues"
   },
-  "homepage": "https://github.com/aghyadalbalkhi-ASAC/city_explorer_api#readme"
+  "homepage": "https://github.com/RB-Codes/city_explorer_api#readme"
 }
